路由策略设置为默认

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,8 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: false
+          enabled: true
           lowerCaseServiceId: true
-      routes:
-      - id: user-service
-        uri: lb://USER-SERVICE
-        predicates:
-          - Path=/user/**
-        filters:
-          - StripPrefix=1
 
 eureka:
   client:
