--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,3 @@
-server:
-  port: 8002
-
 spring:
-  application:
-    name: gateway-server
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lowerCaseServiceId: true
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_URL}
+  profiles:
+    active: dev
